--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /*
 ! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 *//*
